kubernetes/ingress/external-secrets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-secrets-webhook
  namespace: external-secrets
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt-ovh
spec:
  ingressClassName: traefik
  rules:
    - host: external-secrets.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-secrets-webhook
                port:
                  number: 443
  tls:
    - hosts:
      - external-secrets.ebruno.fr
